研发环境/自动化测试/itest/2.1-itest-mysql.yaml

---
# 内部域名
apiVersion: v1
kind: Service
metadata:
#  注意这里需要调整兼容
  name: itest-mysql-server
#  name: itest-mysql
  namespace: devops-test
spec:
  selector:
    app: itest-mysql
  ports:
    - name: for-3306
      port: 3306
      targetPort: 3306
#  type: LoadBalancer
---
# 服务
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itest-mysql
  namespace: devops-test
  labels:
    app: itest-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itest-mysql
  template:
    metadata:
      labels:
        app: itest-mysql
    spec:
      restartPolicy: Always
      containers:
        - name: mysql
          image: registry.cn-shenzhen.aliyuncs.com/iitest/mysql:5.7.4
          imagePullPolicy: IfNotPresent
          #          args:
          #            - --character-set-server=utf8mb4
          #            - --collation-server=utf8mb4_unicode_ci
          ports:
            - containerPort: 3306
              #        livenessProbe:
              #          tcpSocket:
              #            port: 3306
              #          failureThreshold: 10
              #          periodSeconds: 60
              #          initialDelaySeconds: 10
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: itest-mysql
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 5000m
              memory: 5000Mi
              ephemeral-storage: 10Gi
      volumes:
        - name: itest-mysql
          persistentVolumeClaim:
            claimName: itest-mysql
        - name: mysql-config
          configMap:
            name: itest-mysql
