研发环境/自动化测试/itest/2.4-itest.yaml
---
# 内部域名
apiVersion: v1
kind: Service
metadata:
  name: itest
  namespace: devops-test
spec:
  selector:
    app: itest
  ports:
    - name: for-8080
      port: 80
      targetPort: 8080


---
# 服务
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itest
  namespace: devops-test
  labels:
    app: itest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itest
  template:
    metadata:
      labels:
        app: itest
    spec:
      restartPolicy: Always
      nodeSelector:
        "kubernetes.io/hostname": 192.168.90.12
      containers:
        - name: itest
          image: registry.cn-shenzhen.aliyuncs.com/iitest/itest:10.1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8062
            - containerPort: 8063
          #        livenessProbe:
          #          tcpSocket:
          #            port: 8080
          #          failureThreshold: 10
          #          periodSeconds: 60
          #          initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 5000m
              memory: 5000Mi
              ephemeral-storage: 10Gi
