研发环境/自动化测试/itest/3-ingress.yaml
---
# 外部域名
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itest
  namespace: devops-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: itest-test-devops.local.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: itest
                port:
                  number: 80
